--- a/nextstep/.gitignore
+++ b/nextstep/.gitignore
@@ -145,3 +145,6 @@ buildNumber.properties
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
 
+/.idea
+*.iml
+.DS_Store
